Refactor Profile Activity to use ProfileGridTableView. Make some comment changes to ProfGridTableView for clarity. Adjust style for innerDiv on css.
May need to move innerDiv style to rooms_global css file.

--- a/app/assets/stylesheets/room_profile_requests.css.scss
+++ b/app/assets/stylesheets/room_profile_requests.css.scss
@@ -24,6 +24,7 @@
 .profile_table_innerDiv{
 	overflow-y:auto;
 	padding-top: 1.6em;
+	max-height:575px;
 }
 .profile_table_outerDiv thead tr{
 	position:absolute;
