Profile Friend view show's that friend's objects now.

--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -267,7 +267,7 @@ div.profile_info_name{
 }
 // #profile_home_wrapper 
 table.generalGrid{
-	width:100%;
+	// width:100%;
 	background-color:#f5f5f5;
 	border-collapse:separate;
 	border-spacing:10px;
