--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -226,7 +226,7 @@ div.spacer{
 /* this refers to the bottom section of the profile container */
 #profileHome_bottom{
 	clear:both;
-	background-color: #f5f5f5;
+	background-color: transparent;
 	margin: 0 1em;
 	// height:400px;
 	// overflow-y:auto;
