--- a/app/assets/stylesheets/room_profile_requests.css.scss
+++ b/app/assets/stylesheets/room_profile_requests.css.scss
@@ -77,3 +77,12 @@ p.profile_friend_username{
 .profile_request_buttons{
 	padding-right:30px;
 }
+
+.profile_friends_view{
+	background-color: #f5f5f5;
+
+}
+.user-photos-view{
+  background-color: transparent;
+
+}
