--- a/app/assets/stylesheets/rooms_store.css.scss
+++ b/app/assets/stylesheets/rooms_store.css.scss
@@ -1,54 +1,35 @@
-
-.store_main_box {
-  top: 50px;
-  right: 0px;
+#store_main_box {
+  position:fixed;
   z-index:4;
-  float: right;
+  top:50px;
+  right:0px;
   width:700px;
-  height:700px;
-  padding:0px;
-  margin:0 auto;
-  background-color: rgba(0,0,0,.8); /* your choice here */
-  transition:all .3s ease-in-out;
+  height:750px;
+  font-family:"Open Sans",sans-serif;
+  background-color: rgba(0,0,0,.8);
+  transition:all .4s ease-in-out;
+ }
 
-}
-.store_main_box {
-  float: right;
-  width:40px;
-  height:700px;
-  padding:0px;
-  margin:0 auto;
-  /*background-color: rgba(0,0,0,.8);  your choice here */
-  transition:all .3s ease-in-out;
-
-}
-
-#store_main_box_left{
-
+.store_main_box_left{
   float:left;
   width:40px;
-  height:600px;
-  padding: 0px;
-  margin:0 auto;
+  height:750px;
   background-color:#0099cb;
+
 }
 
-#store_main_box_right{
+.store_main_box_right{
   float:right;
-  width:600px;
-  height:600px;
-  padding: 0px;
-  margin:0 auto;
+  width:660px;
+  height:750px;
   background-color:#ffc000;
 }
 
 #store_close_button img{
-
   position:relative;
   left:10px;
   width: 14px;
   height:14px;
-
 
 }
 
