--- a/app/assets/stylesheets/rooms_store.css.scss
+++ b/app/assets/stylesheets/rooms_store.css.scss
@@ -14,7 +14,7 @@
   float:left;
   width:40px;
   height:750px;
-  background-color:#0099cb;
+  //background-color:#0099cb;
 
 }
 
@@ -22,7 +22,8 @@
   float:right;
   width:660px;
   height:750px;
-  background-color:#ffc000;
+  background-color:#ffffff;
+
 }
 
 #store_close_button img{
@@ -39,5 +40,40 @@
   left:-10px;
   width: 22px;
   height:24px;
+
+}
+
+.tab-content{
+  overflow: scroll;
+  width:640px;
+  height:700px;  }
+
+.tab-content li {
+  display: table-cell;
+  //width: 211px;
+  //height: 200px;
+
+}
+
+.tab-content ul {
+  margin: 0px;
+}
+
+.store_item {
+  width:180px;
+  height:180px;
+  padding: 0px;
+}
+
+.store_item_container{
+  margin: 8px;
+  border: 1px solid;
+  border-color: #ebebeb;
+  text-align: center;
+  font-size: 11px;
+  width: 180px;
+  height: 200px;
+
+
 
 }
