Move activity large style to stylesheets. Move Social Bar Style to stylesheets

--- a/app/assets/stylesheets/room_profile_large_item.css.scss
+++ b/app/assets/stylesheets/room_profile_large_item.css.scss
@@ -22,7 +22,7 @@
 // 	min-height: 350px;
 // 	float:left;
 // }
-.activity_item_large_view img{
+.activity_item_large_view_img{
 	width:350px;
 	max-height:500px;
 	border: 1px solid #f4f4f4;
