show large view prev and next arrows. set up console.log events for them.

--- a/app/assets/stylesheets/room_profile_large_item.css.scss
+++ b/app/assets/stylesheets/room_profile_large_item.css.scss
@@ -18,10 +18,10 @@
 	margin:0;
 
 }
-// .activity_item_img_wrap{
-// 	min-height: 350px;
-// 	float:left;
-// }
+.activity_item_img_wrap{
+	min-height: 350px;
+	float:left;
+}
 .activity_item_large_view_img{
 	width:350px;
 	max-height:500px;
