Got tired of styling Profile, so put up a basic bookmark view. Also got profile_flag check working for Profile Objects, bookmarks, photos, and profile home page. Large view is still ugly for photos.

--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -71,7 +71,7 @@ nav.profile {
 	
 }
 #profile_home_wrapper a:hover{
-	background:rgba(0,0,0,.8);
+	// background:rgba(0,0,0,.8);
 }
 
 #profile_home_wrapper{
