Photos view looks ok again

--- a/app/assets/stylesheets/room_profile_large_item.css.scss
+++ b/app/assets/stylesheets/room_profile_large_item.css.scss
@@ -40,3 +40,13 @@
 	padding-right: 20px;
 	padding-top: 10px;
 }
+.photos_large_view{
+	position:absolute;
+	right:15%;
+	top:70px;
+
+}
+.photos_large_view_img{
+	width:350px;
+	height:350px;
+}
