add cloudinary on js

--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -1,4 +1,5 @@
-
+<!-- Configure Cloudinary jQuery plugin -->
+<%= cloudinary_js_config %>
 <div id="xroom_main_container">
   <div id="xroom">
     <div id="xroom_header">   </div>
