More style adjustments to My_Bookmarks

--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -100,6 +100,7 @@ ul.bookmark_menu_list {
 	bottom:0;
 	left:0;
 	border:1px solid #7d7d7d;
+	border-radius:6px;
 }
 #my_bookmarks_bookmark_name_form{
 	left:30px;
