Adjust Profile style some more. Add top template for ProfileFriends

--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -138,6 +138,11 @@ nav.profile {
 div.spacer{
 	height:100px;
 }
+
+.profile_small_top_template .profile_info_name,
+#profile_small_top_optional_button{
+	padding:2em;
+}
 //Sidebar Icons
 
 #profile_home a{
