--- a/app/assets/stylesheets/room_profile_requests.css.scss
+++ b/app/assets/stylesheets/room_profile_requests.css.scss
@@ -1,5 +1,6 @@
 /*Profile Key Request Structure CSS*/
-#profile_key_request_list , #profile_suggested_friends_list {
+#profile_key_request_list , #profile_suggested_friends_list,
+#profile_key_request_list td, #profile_suggested_friends_list td{
 	background-color:#f5f5f5;
 
 }
