adjust style to center Profile Photos grid items

--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -304,6 +304,10 @@ td.gridItem{
 	text-align:center;
 	border:1px solid #ebebeb;
 }
+/*center the picture*/
+.user-photos-view div.gridItem{
+	padding:0 10px;
+}
 .gridItemDescription{
 	color:black;
 	font-size:12px;
