--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -17,15 +17,21 @@
 	border-bottom:1px solid #707070;
 }
 .bookmark_object_title{
-	font-size: 24px;
+	font-size: 22px;
 	font-weight: lighter;
+	padding-top:.5em;
+	padding-bottom: .7em;
 
 	line-height: 26px;
 }
 ul.bookmark_menu_list {
 	margin:0;
 	padding:0;
+	padding-top:.5em;
 
+}
+.bookmark_menu_list li{
+	padding:.4em 0;
 }
 .bookmark_menu_list li a,.bookmark_menu_list li {
 	list-style-type: none;
@@ -39,15 +45,30 @@ ul.bookmark_menu_list {
 	background-color: #464646;
 	text-decoration: none;
 }
-#my_bookmarks_menu_item a{
+#my_bookmarks_menu_item:before {
+    background: transparent url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1378226417/my-bookmarks-menu-icon.png') no-repeat;
+    content:"";
+	padding-right: 40px;
+}
+#my_bookmarks_menu_item:hover:before{
+	background: transparent url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1378226438/my-bookmarks-menu-icon-hover.png') no-repeat;
+	content:"";
+	padding-right: 40px;
+}
+#discover_menu_item:before{
+	background: transparent url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1378226491/discover-bookmarks-menu-icon.png') no-repeat;
+//	content: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1378226491/discover-bookmarks-menu-icon.png');
+	padding-right:40px;
+	content:"";
 
 }
-#discover_menu_item a{
-
+#discover_menu_item:hover:before
+{
+	background: transparent url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1378226505/discover-bookmarks-menu-icon-hover.png') no-repeat;
+	padding-right:40px;
+	content:"";
 }
-#my_bookmarks_menu_item a:hover{
 
-}
 #discover_menu_item a:hover{
 
 }
