json bookmark category and store menu save

--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -3,6 +3,7 @@
 <div id="xroom_main_container">
   <div id="xroom">
     <div id="xroom_header">   </div>
+    <div id="xroom_store_menu_save_cancel_remove">   </div>
     <div id="xroom_items">    </div>
     <div id="xroom_profile">  </div>
     <div id="xroom_storepage">    </div>
