--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -38,7 +38,7 @@ ul.bookmark_menu_list {
 	text-align:left;
 	font-size: 16px;
 	color:white;
-	width:100%;
+	//width:100%;
 }
 #my_bookmarks_menu_item.bookmark_menu_selected, #discover_menu_item.bookmark_menu_selected{
 	color:#40c3fd;
@@ -72,9 +72,16 @@ ul.bookmark_menu_list {
 	content:"";
 }
 
-#discover_menu_item a:hover{
-
+/*Discover Sub Menu Item Style*/
+#discover_submenu_list li.discover_submenu{
+	padding-left:40px;
+	
 }
+#discover_submenu_list{
+	border-bottom:1px solid #707070;
+	padding-bottom:2em;
+}
+/*END Discover Sub Menu Item Style*/
 .my_bookmarks_list_wrap{
 	width:1100px;
 	background-color:white;
@@ -87,6 +94,7 @@ ul.bookmark_menu_list {
 	padding:20px 20px 0px;
 	border-bottom:1px solid #ebebeb;
 	font-size:18px;
+	margin-bottom:35px;
 
 }
 .bookmarks_close_button{
@@ -139,5 +147,14 @@ ul.bookmark_menu_list {
 	padding-left:10px;
 	border:none;
 
+}
+div:hover.bookmark_corner_icon_wrap img.trash_icon{
+display:none;
+}
+div.bookmark_corner_icon_wrap img.trash_icon_hover{
+display:none;
+}
+div:hover.bookmark_corner_icon_wrap img.trash_icon_hover{
+display:block;
 }
 /*END My Bookmarks Grid Items*/
