--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -1,7 +1,9 @@
 <!-- Configure Cloudinary jQuery plugin -->
 <%= cloudinary_js_config %>
 <div id="xroom_main_container">
+
   <div id="xroom">
+    <div id="xroom_scroll_left">   </div>
     <div id="xroom_header">   </div>
     <div id="xroom_store_menu_save_cancel_remove">   </div>
     <div id="xroom_items">    </div>
@@ -9,6 +11,7 @@
     <div id="xroom_storepage">    </div>
     <div id="xroom_bookmarks">    </div>
     <div id="xroom_footer">   </div>
+    <div id="xroom_scroll_right">   </div>
   </div>
 
 </div>
