--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -129,6 +129,7 @@ ul.bookmark_menu_list {
 	position:absolute;
 	bottom:0;
 	left:0;
+	z-index:1; /*To let this thumbnail icon still pop once its been added*/
 }
 .bookmark_grid_item_bottom img{
 	width:30px;
@@ -163,12 +164,26 @@ display:block;
 }
 
 div.just_added{
+	position:absolute;
+	top:0;
 	width:180px;
 	height:180px;
-	content:"Added!";
-	font:white;
-	background-color:rgba(0,0,0,.8)
+	font-color:white;
+	background-color:rgba(0,0,0,.8);
+	z-index:0; /*to let bookmark_grid_item_bottom pop when bookmark is added*/
 
 	 //background: -webkit-radial-gradient(top center, ellipse cover, rgba(0,0,0,.8) 0%,rgba(0,0,0,0.8) 100%), url('http://www.placekitten.com/180/180') repeat;
+}
+div.just_added p{
+	position:relative;
+	top:50%;
+	text-align:center;
+	color:white;
+	font-size:18px;
+}
+div.just_added img{
+	position:absolute;
+	top:0;
+	right:0;
 }
 /*END My Bookmarks Grid Items*/
