--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -2,7 +2,7 @@
 	position:absolute;
 	color:white;
 	height:95%;
-	z-index:4;
+	z-index:6;
 }
 .bookmark_menu{
 	position:fixed;
@@ -21,7 +21,6 @@
 	font-weight: lighter;
 	padding-top:.5em;
 	padding-bottom: .7em;
-
 	line-height: 26px;
 }
 ul.bookmark_menu_list {
@@ -88,7 +87,7 @@ ul.bookmark_menu_list {
 	width:1100px;
 	background-color:white;
 	float:left;
-	height:100%;
+	// height:100%;
 	padding:10px;
 	color:#333333;
 	position:absolute;
