--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -187,3 +187,31 @@ div.just_added img{
 	right:0;
 }
 /*END My Bookmarks Grid Items*/
+/*Bookmarks Preview Mode*/
+.preview_mode_wrap{
+	position:fixed;
+	left:250px;
+	width:1120px;
+	height:100%;
+	background-color: #404040;
+	z-index:2;
+}
+.preview_mode_wrap iframe{
+	width:100%;
+	height:100%;
+}
+.preview_mode_title{
+	color:#ffffff;
+	height:35px;
+	padding:.5em 0 .7em 1em;
+	font-size:18px;
+}
+.preview_mode_title p{
+	margin:1em;
+}
+.preview_mode_title .close_button{
+	position:absolute;
+	right:20px;
+	top:10px;
+}
+/*END Bookmarks Preview Mode*/
