Move Browse Mode View to Rooms View to make view management easier. Events may have to bubble up here for browse data to be passed.

--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -8,6 +8,7 @@
   <div id="xroom_profile">  </div>
   <div id="xroom_storepage">    </div>
   <div id="xroom_bookmarks">    </div>
+  <div id="xroom_bookmarks_browse_mode">    </div>
   <div id="xroom_footer">   </div>
   <div id="xroom_scroll_right">   </div>
 
