Sidebar renders the appropriate model/item_designs bookmarks  when active sites are switched

--- a/app/assets/stylesheets/browse_mode.css.scss
+++ b/app/assets/stylesheets/browse_mode.css.scss
@@ -64,7 +64,7 @@ img.browse_mode_sidebar_icons{
 	margin: 0;
 	left: -2070px;
 	background-color:rgba(0,0,0,.8);
-	transition: all 1.5s ease-in-out;
+	transition: left .5s ease-in-out;
 }
 .horizontal_list{
 	padding-left:20px;
