--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -26,14 +26,14 @@
 }
 nav.profile {
      position:fixed;
-     // top: 16px;/*this needs to be rooms_header height*/
+     top:45px;
      height:100%;
      background-color:transparent; /* your choice here */
      z-index:3; /* make sure this is the highest z-index on the page */
 }
 #profile_drawer_handle{
     position: absolute;
-    top: 45px; /*This needs to be the same as the rooms_header height*/
+    top: 0;
     right: 0;
     height: 100%;
     background-color: rgba(0,0,0,.8); /* your choice here */
@@ -92,7 +92,7 @@ nav.profile {
 #profile_home_container{
 	height:100%;
 	width:720px;
-	position:relative;
+	position:absolute;
 	transition:left 1s ease-in-out;
 	
 }
@@ -115,6 +115,7 @@ nav.profile {
 	color: #f5f5f5;
 	/*left transition will turn left into negative width of profile_home_container */
 	transition:all 1s ease-in-out;
+	height:100%;
 
 }
 #profile_sidebar li{
