--- a/app/assets/stylesheets/room_profile_large_item.css.scss
+++ b/app/assets/stylesheets/room_profile_large_item.css.scss
@@ -8,7 +8,7 @@
 .activity_item_large_view{
 	position:absolute;
 	right:10%;
-	top:70px;
+	top:30px;
 	background-color: #f5f5f5;
 	width:450px;
 	text-align:center;
@@ -22,13 +22,14 @@
 .activity_item_img_wrap{
 	min-height: 350px;
 	float:left;
+	padding:20px 60px;
 }
 .activity_item_large_view_img{
 	width:350px;
 	max-height:500px;
 	border: 1px solid #f4f4f4;
 }
-.activity_item_large_view .profile_request_key_button{
+.activity_item_large_view .profile_large_item_try_it_button{
 	width:auto;
 	float:right;
 }
@@ -40,6 +41,19 @@
 .activity_item_large_view .profile_button_wrap{
 	padding-right: 20px;
 	padding-top: 10px;
+}
+.activity_item_large_content_wrap{
+	width:100%;
+}
+#photos_next{
+	right:20px;
+}
+#photos_prev{
+	left:20px;
+}
+#photos_prev,#photos_next{
+	position:absolute;
+	top:40%;
 }
 .photos_large_view{
 	position:absolute;
