Large Item View- clicking next and prev works for the Activity View.

--- a/app/assets/stylesheets/room_profile_large_item.css.scss
+++ b/app/assets/stylesheets/room_profile_large_item.css.scss
@@ -45,13 +45,13 @@
 .activity_item_large_content_wrap{
 	width:100%;
 }
-#photos_next{
+#photos_next,#large_item_next{
 	right:20px;
 }
-#photos_prev{
+#photos_prev,#large_item_prev{
 	left:20px;
 }
-#photos_prev,#photos_next{
+#photos_prev,#photos_next, #large_item_prev, #large_item_next{
 	position:absolute;
 	top:40%;
 }
