--- a/app/assets/stylesheets/rooms_store.css.scss
+++ b/app/assets/stylesheets/rooms_store.css.scss
@@ -10,51 +10,55 @@
   transition:all .4s ease-in-out;
  }
 
-.store_main_box_left{
+
+.store_main_box_left {
   float:left;
   width:40px;
   height:750px;
-
 }
 
-.store_main_box_right{
+
+.store_main_box_right {
   float:right;
   width:740px;
   height:750px;
   background-color:#ffffff;
-
 }
 
-#store_close_button img{
+
+#store_close_button img {
   position:relative;
   left:10px;
   width: 14px;
   height:14px;
-
 }
 
-#store_collapse_button img{
+
+#store_collapse_button img {
   position:relative;
   top:50%;
   left:-10px;
   width: 22px;
   height:24px;
-
 }
 
-.tab-content{
+
+.tab-content {
   overflow: scroll;
   width:720px;
-  height:700px;  }
+  height:700px;  
+}
+
 
 .tab-content li {
   display: table-cell;
-
 }
 
-.tab-content ul{
+
+.tab-content ul {
   margin: 0px;
 }
+
 
 .store_image_cell {
   width: auto;
@@ -63,7 +67,8 @@
   max-height: 180px;
 }
 
-.store_container{
+
+.store_container {
   margin: 8px;
   border: 1px solid;
   border-color: #ebebeb;
@@ -73,6 +78,7 @@
   height: 200px;
 }
 
+
 #button_preview {
   position:relative;
   top: -100px;
@@ -80,7 +86,7 @@
 }
 
 
-.store_menu_save_cancel_remove{
+.store_menu_save_cancel_remove {
   top: 45px;
   z-index: 3;
 }
