Ask for Key overlay in place for photos

--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -327,6 +327,7 @@ table.generalGrid{
 	background-color: white;
 	display:table-cell;
 	width:620px;
+	position:relative;
 }
 .gridItemWrap{
 	width:200px;
