--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -52,7 +52,7 @@
 
     <td><%= bookmark.id %></td>
 
-    <td><%= bookmark.bookmark_url.to_s %></td>
+    <td ><%= bookmark.bookmark_url %></td>
     <td><%= bookmark.title %></td>
     <td><%= bookmark.i_frame %></td>
     <td><%= image_tag bookmark.image_name.url().to_s,width:50 , height:50 %></td>
