Dress up Style for events after accept and deny key requests. Clean up code. Create model for requesting a key.

--- a/app/assets/stylesheets/room_profile_requests.css.scss
+++ b/app/assets/stylesheets/room_profile_requests.css.scss
@@ -7,6 +7,7 @@
 #profile_key_request_list{
 	overflow:scroll;
 	width:100%;
+	min-height:50px;
 }
 .profile_table_innerDiv.profile_key_request{
 	max-height:200px;
