--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -194,6 +194,14 @@ div.just_added img{
 	top:0;
 	right:0;
 }
+.my_bookmarks_more_square{
+	background-color:#6b6b6b;
+	color:white;
+	font-size:35px;
+	text-align: center;
+	font-weight:lighter;
+	display:table
+}
 /*END My Bookmarks Grid Items*/
 /*Bookmarks Preview Mode*/
 .preview_mode_wrap{
@@ -224,6 +232,10 @@ div.just_added img{
 }
 #bookmark_sidebar_preview_mode{
 	text-align:center;
+	padding-top: 3em;
+	margin-top: 3em;
+	border-top: 1px solid #707070;
+	width:230px;
 }
 .preview_mode_save_button,.save_site_button {
 	background-color:#0099cb;
