Bug Fix: Add bookmark from preview mode was not working if you had added bookmarks from Discover view first. This is because adding a bookmark in DiscoverView does not update the MyBookmarks collection- since that collection is not tied to model updates on the server. I fixed it by fetching the my Bookmarks collection before adding a new site.
If preview mode is open and you click discover or myBookmarks, preview mode closes and displays the appropriate page.

--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -195,12 +195,20 @@ div.just_added img{
 	right:0;
 }
 .my_bookmarks_more_square{
-	background-color:#6b6b6b;
-	color:white;
-	font-size:35px;
+    background-color: #707070;
+	height: 180px;
+	width: 180px;
+	color: white;
+	padding:0;
+	margin: 0;
 	text-align: center;
-	font-weight:lighter;
-	display:table
+	font-size: 35px;
+	position: relative;
+}
+.my_bookmarks_more_square p{
+	top: 40%;
+	width: 100%;
+	position: absolute;
 }
 /*END My Bookmarks Grid Items*/
 /*Bookmarks Preview Mode*/
