--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -249,7 +249,6 @@ div.just_added img{
 	background-color:#0099cb;
 	display:inline-block;
 	color:#ffffff;
-	font-family:Arial;
 	font-size:16px;
 	font-weight:normal;
 	font-style:normal;
@@ -259,5 +258,24 @@ div.just_added img{
 	text-decoration:none;
 	text-align:center;
 	border-radius:3px;
+}
+.preview_mode_saved{
+	background-color: #7d7d7d;
+	font-size:18px;
+	color:white;
+	width:130px;
+	line-height:32px;
+	height:32px;
+	text-align: center;
+	border-radius:3px;
+	display:inline-block;
+	position:relative;
+
+}
+.preview_mode_saved img{
+	position:absolute;
+	left:10px;
+	bottom:10px;
+
 }
 /*END Bookmarks Preview Mode*/
