--- a/app/assets/stylesheets/browse_mode.css.scss
+++ b/app/assets/stylesheets/browse_mode.css.scss
@@ -25,6 +25,7 @@
 	position:fixed;
 	z-index:8;
 	left:70px;
+	background-color: white;
 }
 iframe.current_browse_mode_site {
 	width:100%;
@@ -41,12 +42,11 @@ iframe.current_browse_mode_site.browse_mode_site{
 	background-color:white;
 }
 div.current_browse_mode_site.browse_mode_site{
-	background-color:rgba(0,0,0,.8);
 	width:100%;
 	height:100%;
 	position:fixed;
 	padding-top:10%;
-	color:white;
+	color:black;
 	text-align:center;
 }
 /*Browse mode Sidebar*/
