--- a/app/assets/stylesheets/rooms_search.css.scss
+++ b/app/assets/stylesheets/rooms_search.css.scss
@@ -9,3 +9,23 @@
   overflow: auto;
 }
 
+.search_container{
+  color:#006daf;
+  font-size: 12px;
+}
+
+.search_container_entity_left{
+  float:left;
+  width:80px;
+
+}
+.search_container_entity_right{
+  float:right;
+  width:290px;
+
+}
+.search_image_cell{
+  width:60px;
+  height:60px;
+
+}
