--- a/app/assets/stylesheets/rooms_room_header.css.scss
+++ b/app/assets/stylesheets/rooms_room_header.css.scss
@@ -1,3 +1,17 @@
+#xroom_header_active_sites{
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 23px;
+  height: 21px;
+}
+#xroom_header_active_sites {
+  background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/c_fit,h_21,w_23/v1379697970/browse-mode-active.png');
+  width:auto;
+
+}
+#xroom_header_active_sites:hover{
+  background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/c_fit,h_21,w_23/v1379697987/browse-mode-active-highlight.png');
+}
 
 #xroom_header_profile {
 
