Add toast to active sites click event. Add custom toast class to position as needed.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -98,4 +98,9 @@ footer ul li {
 .dark_text{
     color:#464646;
 }
+.toast-top-center{
+    top: 52px; 
+    left: 50%; 
+    margin-left: -150px; 
+}
 /*End social bar style*/
