Add Item Name to Header during Browse mode. This is kind of a hack. It uses Jquery. This whole view will likely be restructured in the future to accomodate all the events.

--- a/app/assets/stylesheets/browse_mode.css.scss
+++ b/app/assets/stylesheets/browse_mode.css.scss
@@ -85,6 +85,12 @@ li.browse_mode_sidebar_icons_list{
 	padding:8px;
 
 }
+/*header Item name in Sidebar*/
+#browse_mode_item_name{
+	color: white;
+	padding-top: 10px;
+	font-size: 16px;
+}
 /*END Browse mode Sidebar*/
 /*Active Sites Menu*/
 .browse_mode_active_sites_menu{
