--- a/app/assets/stylesheets/rooms_store.css.scss
+++ b/app/assets/stylesheets/rooms_store.css.scss
@@ -27,6 +27,7 @@
 
 #store_close_button img {
   position:relative;
+  top:1%;
   left:10px;
   width: 14px;
   height:14px;
@@ -36,7 +37,7 @@
 #store_collapse_button img {
   position:relative;
   top:50%;
-  left:-10px;
+  left:0px;
   width: 22px;
   height:24px;
 }
