--- a/app/views/bookmarks_categories/_form.html.erb
+++ b/app/views/bookmarks_categories/_form.html.erb
@@ -27,11 +27,20 @@
         <%= f.text_field :name %>
       </div>
 
-        <div class="field">
-          <%= f.label :item_id %><br />
-          <%= f.collection_select :item_id, Item.all, :id, :id_and_item , :prompt => true %>
-        </div>
+        <% if @bookmarks_categories_count > 1 %>
+            <div class="field">
+            <%= f.label :item_id %><br />
+            <%= f.collection_select :item_id, Item.all, :id, :id_and_item , :prompt => true %>
+            </div>
+        <%else%>
+            <div class="field">
+              Item Id
+              <%= @bookmarks_category_show_id.item_id %>
 
+              <h6> Sorry: a least one category must exist for item</h6>
+            </div>
+
+        <%end%>
 
         <div class="actions">
         <%= f.submit %>
