--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -305,7 +305,7 @@ table.generalGrid{
 	border-spacing:10px;
 }
 #gridItemList{
-	background-color: #f5f5f5;
+	background-color: white;
 	position:relative;
 	overflow-y:scroll;
 	width:620px;
@@ -331,7 +331,7 @@ table.generalGrid{
 }
 .gridItemWrap{
 	width:200px;
-	background-color: #f5f5f5;
+	background-color: white;
 	display:inline-block;
 }
 .gridItem{
