--- a/app/assets/stylesheets/rooms_search.css.scss
+++ b/app/assets/stylesheets/rooms_search.css.scss
@@ -9,23 +9,41 @@
   overflow: auto;
 }
 
+.search_container_entity{
+  padding: 10px;
+  margin: 0px;
+  border:0px;
+
+
+}
+
+.search_container_entity:hover{
+  cursor:pointer;
+}
+
 .search_container{
   color:#006daf;
   font-size: 12px;
 }
 
-.search_container_entity_left{
-  float:left;
-  width:80px;
-
-}
-.search_container_entity_right{
-  float:right;
-  width:290px;
-
-}
 .search_image_cell{
   width:60px;
   height:60px;
+  border:1px solid;
+  border-color: #bbbbbb;
 
+}
+p.search_media_body_top{
+  color:#0073a5;
+  font-size: 16px;
+  margin-top:8px;
+  margin-bottom:0px;
+  margin-right:0px;
+  margin-left:0px;
+
+}
+p.search_media_body_bottom{
+  color:#898989;
+  font-size:12px;
+  margin: 0px;
 }
