--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,11 @@
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+
+  <!-- Insert image to facebook og:image -->
+
+  <meta property="og:image" content= "<%= @fb_og_image %>" />
+
   <link rel="shortcut icon"  href="<%= cloudinary_url("http://res.cloudinary.com/hpdnx5ayv/image/upload/v1368722702/favicon_uu2zkk.ico") %>" />
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,300,600' rel='stylesheet' type='text/css'>
   <%= render 'layouts/shim' %>
