--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,12 @@
   <%= csrf_meta_tags %>
 
   <!-- Insert image to facebook og:image -->
+  <% if @fb_app_id %>
   <meta property="fb:app_id" content="<%=@fb_app_id %>" /> 
   <meta property="og:image"  content= "<%= @fb_og_image %>" />
   <meta property="og:title"  content="<%= @fb_og_title %>" /> 
   <meta property="og:description" content="<%= @fb_og_description %>"/>
+  <% end %>
  
 
 
