--- a/app/assets/stylesheets/room_profile_large_item.css.scss
+++ b/app/assets/stylesheets/room_profile_large_item.css.scss
@@ -57,6 +57,10 @@
 	padding-right: 20px;
 	padding-top: 10px;
 }
+.activity_item_large_list{
+	display:inline-block;
+	padding:10px;
+}
 .activity_item_large_view .social_bar .navbar .nav > li > a{
 	padding:0 10px;
 }
