Style Activity Large Template more- indent social bar and TryInMyRoom button.

--- a/app/assets/stylesheets/room_profile_large_item.css.scss
+++ b/app/assets/stylesheets/room_profile_large_item.css.scss
@@ -49,8 +49,12 @@
 	float:right;
 }
 .activity_item_large_view .social_bar{
-	width:50%;
-	float:left;
+	// width:50%;
+	// float:left;
+}
+.activity_item_large_list.profile_button{
+	vertical-align:top;
+	padding:0;
 }
 
 .activity_item_large_view .profile_button_wrap{
