--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -55,8 +55,8 @@
     <td ><%= bookmark.bookmark_url %></td>
     <td><%= bookmark.title %></td>
     <td><%= bookmark.i_frame %></td>
-    <td><%= image_tag bookmark.image_name.url().to_s,width:50 , height:50 %></td>
-    <td><%= image_tag bookmark.image_name_desc.url().to_s,width: 50, height:50 %></td>
+    <td><%= image_tag bookmark.image_name.url().to_s,width:50 , height:50,  :default_image => "logo_1.png" %></td>
+    <td><%= image_tag bookmark.image_name_desc.url().to_s,width: 50, height:50, :default_image => "logo_1.png" %></td>
     <td><%= bookmark.description %></td>
     <td><%= bookmark.like %></td>
 
