--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -8,7 +8,7 @@
               <tr>
                 <% item_groups.each do |item| %>
                 <td >
-                    <%= link_to image_tag(item.image_name.url().to_s, width: 200,height:200 ),  shop_path(item.id), :method => :get %>
+                    <%= link_to image_tag(item.image_name.url().to_s, width: 200,height:200 ),  shop_show_item_path(item.id), :method => :get %>
                     </br><%= item.name %>
                 </td>
                 <% end %>
