--- a/app/views/shop/show_items_design.html.erb
+++ b/app/views/shop/show_items_design.html.erb
@@ -1,10 +1,13 @@
-<div id="shop_container">
-  <div id="shop_left">
+<div class="shop_container">
+  <div class="shop_left">
     <p>
       <%= image_tag @items_design.image_name_selection.url.to_s , width: 300,height:300 %>
     </p>
   </div>
-  <div id="shop_right">
+  <div class="shop_right">
+    <br/>
+    <br/>
+    <br/>
     <h4>
       <%= @items_design.name %>
     </h4>
@@ -14,19 +17,19 @@
   </div>
 </div>
 
-<div id="shop_container">
-  <div id="shop_content_items">
 
-    <div id="shop_table">
+
+<div class="shop_container">
+    <div class="shop_table">
       <table>
         <% if @item_length > 0 %>
             <% @items_designs_rand.in_groups_of(@item_length,false).each do |items_design_groups| %>
                 <tr>
                   <% items_design_groups.each do |items_design| %>
                       <td >
-                        <%= link_to image_tag(items_design.image_name_selection.url().to_s,:width => 100, :height => 100),
-                                    shop_show_items_design_path(items_design.id), :method => :get %>
-                        </br><%= items_design.name %>
+                        <%= link_to image_tag(items_design.image_name_selection.url().to_s,:width => 200, :height => 200),
+                                    shop_show_items_design_path(items_design.id,get_clean_name(items_design.name)), :method => :get %>
+                        </br><%= items_design.name[0,15] %>
                       </td>
 
                   <% end %>
@@ -35,5 +38,5 @@
         <% end %>
       </table>
     </div>
-  </div>
+
 </div>
