--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -1,6 +1,5 @@
 <div class="shop_container">
-  <h4>Shop by category</h4>
-
+  <%= render 'shop_nav' %>
   <div class="shop_table">
       <table>
           <% if @item_length > 0 %>
