--- a/app/views/shop/show_item.html.erb
+++ b/app/views/shop/show_item.html.erb
@@ -1,5 +1,6 @@
 
 <div class="shop_container">
+  <%= render 'shop_nav' %>
   <div class="shop_filter">
     <h5>Filter by </h5>
     <h5>Type  </h5>
