--- a/app/views/shop/show_bundle.html.erb
+++ b/app/views/shop/show_bundle.html.erb
@@ -1,4 +1,5 @@
 <div class="shop_container">
+  <%= render 'shop_nav' %>
   <div class="shop_left">
     <p>
       <%= image_tag @bundle.image_name.url.to_s , width: 300,height:300 %>
