Roll over highlights on Profile Friends, Requests, and Suggested Friends.

--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -59,7 +59,7 @@ nav.profile {
 }
 #profile_home_wrapper td{
     width:200px;
-    background-color:white;
+    // background-color:white;
 }
 #profile_home_wrapper ul{
 	margin:0;
