--- a/app/assets/stylesheets/room_profile_large_item.css.scss
+++ b/app/assets/stylesheets/room_profile_large_item.css.scss
@@ -40,7 +40,7 @@
 	float:left;
 }
 .activity_item_large_view_img{
-	width:350px;
+	max-width:350px;
 	max-height:500px;
 	border: 1px solid #ebebeb;
 }
