--- a/app/assets/stylesheets/room_profile_requests.css.scss
+++ b/app/assets/stylesheets/room_profile_requests.css.scss
@@ -1,7 +1,7 @@
 /*Profile Key Request Structure CSS*/
 #profile_key_request_list , #profile_suggested_friends_list,
 #profile_key_request_list td, #profile_suggested_friends_list td{
-	background-color:#f5f5f5;
+	// background-color:#f5f5f5;
 
 }
 #profile_key_request_list{
@@ -40,8 +40,20 @@
 /*End Profile Key Request Structure*/
 /*Profile Single Request and Single Suggestion CSS*/
 .profile_single_request .media, .profile_friend.media{
-	background-color:#f5f5f5;
+	// background-color:#f5f5f5;
 	border-bottom:1px solid #f4f4f4;
+	position:relative;
+}
+.link_spanner{
+	position:absolute; 
+  width:100%;
+  height:100%;
+  top:0;
+  left: 0;
+  z-index: 1;
+}
+.profile_friend.media:hover,.profile_single_request:hover,.profile_friends_suggestion_single:hover{
+	background-color: #e2e2e2;
 }
 p.profile_request_name, p.profile_suggestion_name,
 p.profile_friend_name{
