add image name logo and gray

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -44,6 +44,12 @@
           <%= f.file_field :image_name %>
         </div>
 
+        <div class="field">
+          <%= f.label :image_name_gray %><br />
+          <%= f.file_field :image_name_gray %>
+        </div>
+
+
 
         <div class="actions">
         <%= f.submit %>
