--- a/app/views/items_designs/_form.html.erb
+++ b/app/views/items_designs/_form.html.erb
@@ -82,6 +82,10 @@
             <%= f.file_field :image_name %>
         </div>
 
+        <div class="field">
+          <%= f.label :image_name_logo %><br />
+          <%= f.file_field :image_name_logo %>
+        </div>
 
         <div class="field">
           <%= f.label :image_name_hover %><br />
