--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -11,6 +11,8 @@
     <th>Name</th>
     <th>Clickable</th>
     <th>Image name</th>
+    <th>Image name gray</th>
+
     <th>Priority order</th>
 
     <th></th>
@@ -24,6 +26,7 @@
     <td><%= item.name %></td>
     <td><%= item.clickable %></td>
     <td><%= cl_image_tag(item.image_name.url().to_s,width: 100, height:100) %></td>
+    <td><%= cl_image_tag(item.image_name_gray.url().to_s,width: 100, height:100) %></td>
     <td><%= item.priority_order %></td>
     <td><%= link_to 'Show', item  , class: "btn btn-primary" %> </td>
     <td><%= link_to 'Edit', edit_item_path(item), class: "btn btn-primary" %></td>
